--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </div>
         </div>
         From Wikipedia, the free encyclopedia
-        <p class="insert">For other uses, see Lamborghini (disambiguation).</p>
+        <p class="insert">For other uses, see <a href="https://en.wikipedia.org/wiki/Lamborghini_(disambiguation)">Lamborghini (disambiguation).</a></p>
         <tr>
-            <table class="right-block-position table">
+            <table class="right-block-table table-2">
                 <caption class="table-name">Automobili Lamborghini S.p.A.</caption>
                 <tbody class="right-block">
                 <tr>
@@ -98,7 +98,7 @@
                         Type
                     </th>
                     <td class="align-left">
-                        Subsidiary
+                        <a href="https://en.wikipedia.org/wiki/Subsidiary">Subsidiary</a> 
                     </td>
                 </tr>
                 <tr>
@@ -106,7 +106,7 @@
                         Industry
                     </th>
                     <td class="align-left">
-                        Automotive
+                        <a href="https://en.wikipedia.org/wiki/Automotive_industry">Automotive</a>
                     </td>
                 </tr>
                 <tr>
@@ -122,7 +122,7 @@
                         Founder
                     </th>
                     <td class="align-left">
-                        Ferruccio Lamborghini
+                        <a href="https://en.wikipedia.org/wiki/Ferruccio_Lamborghini">Ferruccio Lamborghini</a>
                     </td>
                 </tr>
                 <tr>
@@ -130,7 +130,7 @@
                         Headquarters
                     </th>
                     <td class="align-left">
-                        Sant'Agata Bolognese,<br> Emilia-Romagna, Italy
+                        <a href="https://en.wikipedia.org/wiki/Sant%27Agata_Bolognese">Sant'Agata Bolognese</a>,<br> <a href="https://en.wikipedia.org/wiki/Emilia-Romagna">Emilia-Romagna</a>, Italy
                     </td>
                 </tr>
                 <tr>
@@ -175,7 +175,7 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        Operating income
+                        <a href="https://en.wikipedia.org/wiki/Earnings_before_interest_and_taxes"> Operating income </a>
                     </th>
                     <td class="align-left">
                         Increase €614 million
@@ -183,7 +183,7 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        Net income
+                        <a href="https://en.wikipedia.org/wiki/Net_income">Net income</a>
                     </th>
                     <td class="align-left">
                         Increase €10.1 million (2014)
@@ -191,7 +191,7 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        Total equity
+                        <a href="https://en.wikipedia.org/wiki/Equity_(finance)">Total equity</a>
                     </th>
                     <td class="align-left">
                         Increase €1.832 billion (2014)
@@ -202,7 +202,7 @@
                         Owner
                     </th>
                     <td class="align-left">
-                        Volkswagen Group
+                        <a href="https://en.wikipedia.org/wiki/Volkswagen_Group">Volkswagen Group</a>
                     </td>
                 </tr>
                 <tr>
@@ -215,20 +215,20 @@
                 </tr>
                 <tr>
                     <th scope="row">
-                        Parent
+                        <a href="https://en.wikipedia.org/wiki/Parent_company">Parent</a>
                     </th>
                     <td class="align-left">
-                        Audi AG
+                        <a href="https://en.wikipedia.org/wiki/Audi">Audi AG</a>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">
-                        Subsidiaries
+                        <a href="https://en.wikipedia.org/wiki/Subsidiary">Subsidiaries</a>
                     </th>
                     <td class="align-left">
-                        Ducati Motor Holding
-                        <br>S.p.A.
-                        <br>Italdesign Giugiaro
+                        <a href="https://en.wikipedia.org/wiki/Ducati_Motor_Holding_S.p.A.">Ducati Motor Holding
+                        <br>S.p.A.</a>
+                        <br><a href="https://en.wikipedia.org/wiki/Italdesign_Giugiaro">Italdesign Giugiaro</a>
                     </td>
                 </tr>
                 <tr>
@@ -248,37 +248,39 @@
                         href="https://en.wikipedia.org/wiki/Help:IPA/Italian">autoˈmɔːbili lamborˈɡiːni]</a> )
                     is an Italian manufacturer of luxury <a href="https://en.wikipedia.org/wiki/Sports_car"> sports
                         cars</a> and
-                    <a href="https://en.wikipedia.org/wiki/SUV"> SUVs</a> based in Sant'Agata Bolognese. The company is
+                    <a href="https://en.wikipedia.org/wiki/SUV"> SUVs</a> based in <a href="https://en.wikipedia.org/wiki/Sant%27Agata_Bolognese">Sant'Agata Bolognese.</a> The company is
                     owned by
-                    the Volkswagen Group through its subsidiary Audi.
+                    the <a href="https://en.wikipedia.org/wiki/Volkswagen_Group">Volkswagen Group through </a> its subsidiary <a href=""> Audi.</a>
                 </p>
-                <p>Ferruccio Lamborghini (1916–1993), an Italian manufacturing magnate, founded Automobili Ferruccio
+                <p><a href="https://en.wikipedia.org/wiki/Ferruccio_Lamborghini">Ferruccio Lamborghini</a> (1916–1993), an Italian <a href="https://en.wikipedia.org/wiki/Business_magnate">manufacturing magnate</a>, founded Automobili Ferruccio
                     Lamborghini
-                    S.p.A. in 1963 to compete with Ferrari. The company was noted for using a rear mid-engine,
-                    rear-wheel drive layout.
-                    Lamborghini grew rapidly during its first decade, but sales plunged in the wake of the 1973
-                    worldwide financial downturn and the oil crisis.
+                    S.p.A. in 1963 to compete with <a href="https://en.wikipedia.org/wiki/Ferrari">Ferrari.</a>
+                    The company was noted for using a <a href="https://en.wikipedia.org/wiki/Rear_mid-engine,_rear-wheel-drive_layout">rear mid-engine,rear-wheel drive</a> layout.
+                    Lamborghini grew rapidly during its first decade, but sales plunged in the wake of the <a href="https://en.wikipedia.org/wiki/1973%E2%80%931974_stock_market_crash">1973
+                    worldwide financial downturn</a> and the <a href="https://en.wikipedia.org/wiki/1973_oil_crisis">oil crisis</a>.
                     The firm's ownership changed three times after 1973, including a bankruptcy in 1978.
-                    American Chrysler Corporation took control of Lamborghini in 1987 and sold it to Malaysian
+                    American <a href="https://en.wikipedia.org/wiki/Chrysler">Chrysler Corporation</a> took control of Lamborghini in 1987 and sold it to Malaysian
                     investment group Mycom Setdco and Indonesian group V'Power Corporation in 1994.
                     In 1998, Mycom Setdco and V'Power sold Lamborghini to the Volkswagen Group where it was placed under
                     the control of the group's Audi division.
                 </p>
                 <p>New products and model lines were introduced to the brand's portfolio and brought to the market and
                     saw an increased productivity for the brand.
-                    In the late 2000s, during the worldwide financial crisis and the subsequent economic crisis,
-                    Lamborghini's sales saw a drop of nearly 50 per cent.</p>
-                <p>Lamborghini currently produces the V10-powered Huracán, Urus SUV powered by a twin-turbo V8 engine
-                    and will produce the Revuelto, a V12/electric hybrid, as of 2024.
-                    In addition, the company produces V12 engines for offshore powerboat racing.
+                    In the late 2000s, during the <a href="https://en.wikipedia.org/wiki/Financial_crisis_of_2007%E2%80%932010">worldwide financial crisis</a> and the subsequent economic crisis,
+                    Lamborghini's sales saw a drop of nearly 50 per cent.
+                </p>
+                <p>Lamborghini currently produces the V10-powered <a href="https://en.wikipedia.org/wiki/Lamborghini_Hurac%C3%A1n">Huracán</a>,<a href="https://en.wikipedia.org/wiki/Lamborghini_Urus">Urus</a>
+                    SUV powered by a <a href="https://en.wikipedia.org/wiki/Twin-turbo">twin-turbo</a><a href="https://en.wikipedia.org/wiki/V8_engine">V8 engine</a>
+                    and will produce the <a href="https://en.wikipedia.org/wiki/Lamborghini_Revuelto">Revuelto</a>, a V12/<a href="https://en.wikipedia.org/wiki/Plug-in_hybrid">electric hybrid</a>, as of 2024.
+                    In addition, the company produces <a href="https://en.wikipedia.org/wiki/V12_engine">V12 engines</a> for <a href="https://en.wikipedia.org/wiki/Offshore_powerboat_racing">offshore powerboat racing.</a>
                 </p>
                 <p>
-                    Lamborghini Trattori, founded in 1948 by Ferruccio Lamborghini, is headquartered in Pieve di Cento,
-                    Italy and continues to produce tractors.
+                    <a href="https://en.wikipedia.org/wiki/Lamborghini_Trattori">Lamborghini Trattori</a>, founded in 1948 by Ferruccio Lamborghini, is headquartered in <a href="https://en.wikipedia.org/wiki/Pieve_di_Cento">Pieve di Cento</a>,
+                    Italy and continues to produce <a href="https://en.wikipedia.org/wiki/Tractor">tractors.</a>
                     Since 1973, Lamborghini Trattori has been a separate entity from the automobile manufacturer.
                 </p>
                 <h1 id="History">History</h1>
-                <p class="insert">Main article: History of Lamborghini</p>
+                <p class="insert">Main article: <a href="https://en.wikipedia.org/wiki/History_of_Lamborghini">History of Lamborghini</a></p>
                 <p>Manufacturing magnate Italian Ferruccio Lamborghini founded the company in 1963 with the objective of
                     producing a refined grand touring car to compete with offerings from established marques such as
                     Ferrari.
