--- a/index.html
+++ b/index.html
@@ -374,25 +374,25 @@
                 <div role="note" class="note">Main article: <a href="https://en.wikipedia.org/wiki/List_of_Lamborghini_automobiles" title="List of Lamborghini automobiles">List of Lamborghini automobiles</a></div>
                 <p>As of the 2018 model year, Lamborghini's automobile product range consists of three model lines, two of which are mid-engine two-seat sports cars while the third one is a front engined, all-wheel drive SUV.<sup id="cite_ref-6" class="reference"><a href="#cite_note-6">[6]</a></sup>
                 </p>
-                <h4><span class="headline" id="Models_in_production">Models in production</span></h4>
+                <h4><span class="headline" id="Models_in_production" style="font-weight: bold; font-family: sans-serif;">Models in production</span></h4>
                 <ul><li><b>Aventador</b></li></ul>
                 <div role="note" class="note">Main article: <a href="https://en.wikipedia.org/wiki/Lamborghini_Aventador" title="Lamborghini Aventador">Lamborghini Aventador</a></div>
-                <figure class="photo-lamborghini" typeof="La"><a href="https://en.wikipedia.org//wiki/File:Lamborghini_Aventador_S_coupe_IMG_2926.jpg" class="description"><img src="//upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/220px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg" decoding="async" width="220" height="96" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/330px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/440px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg 2x" data-file-width="4474" data-file-height="1962"></a><figcaption class="photo-text">Lamborghini Aventador S coupe</figcaption></figure>
+                <figure class="photo-lamborghini" typeof="La"><a href="https://en.wikipedia.org//wiki/File:Lamborghini_Aventador_S_coupe_IMG_2926.jpg" class="description"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/220px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg" decoding="async" width="220" height="96" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/330px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lamborghini_Aventador_S_coupe_IMG_2926.jpg/440px-Lamborghini_Aventador_S_coupe_IMG_2926.jpg 2x" data-file-width="4474" data-file-height="1962"></a><figcaption class="photo-text">Lamborghini Aventador S coupe</figcaption></figure>
                 <p>The current V12-powered Aventador production line consists of the LP 740–4 Aventador <a href="https://en.wikipedia.org/wiki/Lamborghini_Aventador" title="Lamborghini Aventador">Ultimate</a> and <a href="/wiki/Lamborghini_Aventador" title="Lamborghini Aventador">SVJ</a> coupés and roadsters and it is said that the production of all Aventador models will end in 2022.<sup id="cite_ref-7" class="reference"><a href="#cite_note-7">[7]</a></sup>
                 </p>
                 <ul><li><b>Revuelto</b></li></ul>
                 <div role="note" class="note">Main article: <a href="https://en.wikipedia.org/wiki/Lamborghini_Revuelto" title="Lamborghini Revuelto">Lamborghini Revuelto</a></div>
-                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="https://en.wikipedia.org/wiki/File:2023_Lamborghini_Revuelto.jpg" class="description"><img src="//upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/220px-2023_Lamborghini_Revuelto.jpg" decoding="async" width="220" height="130" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/330px-2023_Lamborghini_Revuelto.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/440px-2023_Lamborghini_Revuelto.jpg 2x" data-file-width="4780" data-file-height="2824"></a><figcaption class="photo-text">Lamborghini Revuelto coupe</figcaption></figure>
+                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="https://en.wikipedia.org/wiki/File:2023_Lamborghini_Revuelto.jpg" class="description"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/220px-2023_Lamborghini_Revuelto.jpg" decoding="async" width="220" height="130" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/330px-2023_Lamborghini_Revuelto.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/2/21/2023_Lamborghini_Revuelto.jpg/440px-2023_Lamborghini_Revuelto.jpg 2x" data-file-width="4780" data-file-height="2824"></a><figcaption class="photo-text">Lamborghini Revuelto coupe</figcaption></figure>
                 <p>Production of the new Revuelto began in mid-2023 and it will be delivered in late 2023 as a 2024 model. The car will be powered by a 6.5L naturally aspirated V12 and three magnetic motors for a combined power output of 1,001 hp (1,015 PS).<sup id="cite_ref-8" class="reference"><a href="#cite_note-8">[8]</a></sup><sup id="cite_ref-9" class="reference"><a href="#cite_note-9">[9]</a></sup>
                 </p>
                 <ul><li><b>Huracán</b></li></ul>
                 <div role="note" class="note">Main article: <a href="https://en.wikipedia.org/wiki/Lamborghini_Hurac%C3%A1n" title="Lamborghini Huracán">Lamborghini Huracán</a></div>
-                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="/wiki/File:Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg" class="description"><img src="//upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/220px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg" decoding="async" width="220" height="112" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/330px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/440px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg 2x" data-file-width="4930" data-file-height="2518"></a><figcaption class="photo-text">Lamborghini Huracan LP 610-4  <br>Spyder</figcaption></figure>
+                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="/wiki/File:Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg" class="description"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/220px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg" decoding="async" width="220" height="112" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/330px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg/440px-Lamborghini_Huracan_LP_610-4_Spyder_IMG_2644.jpg 2x" data-file-width="4930" data-file-height="2518"></a><figcaption class="photo-text">Lamborghini Huracan LP 610-4  <br>Spyder</figcaption></figure>
                 <p>The V10-powered Huracán line currently includes the all-wheel-drive LP 610-4 coupé and Spyder, the low cost rear-wheel-drive LP 580-2 coupé and Spyder and the most powerful, track oriented LP 640-4 Performante coupé and Spyder.<sup id="cite_ref-10" class="reference"><a href="#cite_note-10">[10]</a></sup>
                 </p>
                 <ul><li><b>Urus</b></li></ul>
                 <div role="note" class="note">Main article: <a href="/wiki/Lamborghini_Urus" title="Lamborghini Urus">Lamborghini Urus</a></div>
-                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="/wiki/File:Lamborghini_Urus_IMG_2640.jpg" class="description"><img src="//upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/220px-Lamborghini_Urus_IMG_2640.jpg" decoding="async" width="220" height="146" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/330px-Lamborghini_Urus_IMG_2640.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/440px-Lamborghini_Urus_IMG_2640.jpg 2x" data-file-width="4536" data-file-height="3019"></a><figcaption class="photo-text">Lamborghini Urus</figcaption></figure>
+                <figure class="photo-lamborghini" typeof="mw:File/Thumb"><a href="/wiki/File:Lamborghini_Urus_IMG_2640.jpg" class="description"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/220px-Lamborghini_Urus_IMG_2640.jpg" decoding="async" width="220" height="146" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/330px-Lamborghini_Urus_IMG_2640.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/7/78/Lamborghini_Urus_IMG_2640.jpg/440px-Lamborghini_Urus_IMG_2640.jpg 2x" data-file-width="4536" data-file-height="3019"></a><figcaption class="photo-text">Lamborghini Urus</figcaption></figure>
                 <p>With the intention of doubling its sales volume by 2019, Lamborghini also added an SUV named Urus in its line-up which is powered by a <a href="/wiki/Twin-turbo" title="Twin-turbo">twin-turbo</a> <a href="/wiki/V8_engine" title="V8 engine">V8 engine</a> and utilises a front engine, all-wheel drive layout.<sup id="cite_ref-11" class="reference"><a href="#cite_note-11">[11]</a></sup><sup id="cite_ref-12" class="reference"><a href="#cite_note-12">[12]</a></sup>
                 </p>
                 <h3><span class="headline" id="Marine_engines">Marine engines</span></h3>
@@ -406,17 +406,147 @@
                 </p>
                 <ul class="gallery">
                     <li class="gallerybox" style="width: 235px">
-                        <div class="thumb" style="width: 230px; height: 180px;"><span typeof="mw:File"><a href="/wiki/File:Mus%C3%A9e_Lamborghini_0071.JPG" class="description" title="L900 marine engine"><img alt="L900 marine engine" src="//upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/200px-Mus%C3%A9e_Lamborghini_0071.JPG" decoding="async" width="200" height="150" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/300px-Mus%C3%A9e_Lamborghini_0071.JPG 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/400px-Mus%C3%A9e_Lamborghini_0071.JPG 2x" data-file-width="1600" data-file-height="1200"></a></span></div>
+                        <div class="thumb" style="width: 230px; height: 180px;"><span typeof="mw:File"><a href="/wiki/File:Mus%C3%A9e_Lamborghini_0071.JPG" class="description" title="L900 marine engine"><img alt="L900 marine engine" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/200px-Mus%C3%A9e_Lamborghini_0071.JPG" decoding="async" width="200" height="150" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/300px-Mus%C3%A9e_Lamborghini_0071.JPG 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/6/62/Mus%C3%A9e_Lamborghini_0071.JPG/400px-Mus%C3%A9e_Lamborghini_0071.JPG 2x" data-file-width="1600" data-file-height="1200"></a></span></div>
                         <div class="gallerytext">
-            <p>L900 marine engine
-            </p>
+            <p class="little-text">L900 marine engine</p>
                         </div>
                     </li>
             </ul>
-
+            
+            <h2><span class="headline">Motoresport</span></h2>
+            <div class="little-bit-text">
+            <tr>
+            <table class="right-block-table table-2">
+                <caption class="table-name">Lamborghini Motorsport Division,<br> Squadra Corse</caption>
+                <tbody class="right-block">
+                    <tr>
+                        <td colspan="2">
+                            <span>
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Lamborghini_Squadra_Corse_logo.jpg/220px-Lamborghini_Squadra_Corse_logo.jpg">
+                            </span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            <a href="https://en.wikipedia.org/wiki/Trade_name">Trade name</a> 
+                        </th>
+                        <td class="align-left">
+                            Squadra Corse
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Type
+                        </th>
+                        <td class="align-left">
+                            Subsidiary
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Indastry
+                        </th>
+                        <td class="align-left">
+                            <ul>
+                                <li>
+                                    Automobile
+                                </li>
+                                <li>
+                                    Motorsports
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Headquarters
+                        </th>
+                        <td class="align-left">
+                            Sant'Agata Bolognese, Italy
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Area served
+                        </th>
+                        <td class="align-left">
+                            Worldwide
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Key people
+                        </th>
+                        <td class="align-left">
+                            <li><a href="https://en.wikipedia.org/wiki/Stephan_Winkelmann">Stephan Winkelmann</a><br> (CEO of Automobili<br> Lamborghini)</li>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Owner
+                        </th>
+                        <td class="align-left">
+                            Automobili Lamborghini
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Parents
+                        </th>
+                        <td class="align-left">
+                            Audi AG
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            Website
+                        </th>
+                        <td class="align-left">
+                            <a href="	lamborghini.com/en-en/motorsport">lamborghini.com/en-en<br>/motorsport</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                    </table>
+            </tr>
+            <span class="headline">Automobiles produced</span>
+            <p>Lamborghini Motorsport Division Squadra Corse produces GT3 cars and cars for their Super Trofeo events based on the <a href="https://en.wikipedia.org/wiki/Lamborghini_Gallardo">Gallardo</a> and <a href="https://en.wikipedia.org/wiki/Hurac%C3%A1n">Huracán</a>. 
+                Apart from them, the Squadra Corse builds cars upon customer request.</p>
+                <p>GT3 and Super Trofeo Cars</p>
+                <ul>
+                    <li>
+                        <a>Gallardo LP 570-4 Super Trofeo</a>
+                    </li>
+                    <li>
+                        <a>Gallardo LP 560-4 Super Trofeo</a>
+                    </li>
+                    <li>
+                        <a>Huracán LP 620-2 Super Trofeo EVO</a>
+                    </li>
+                    <li>
+                        <a>Huracán LP 620-2 Super Trofeo EVO2</a>
+                    </li>
+                    <li>
+                        <a>Huracán Super Trofeo GT2</a>
+                    </li>
+                    <li>
+                        <a>Huracán GT3</a>
+                    </li>
+                    <li>
+                        <a>Huracán GT3 Evo</a>
+                    </li>
+                    <li>
+                        <a>Huracán GT3 Evo 2</a>
+                    </li>
+                </ul>
+                <span class="headline">Special cars</span>
+                <p>These cars were built by Squadra Corse upon customer request.</p>
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Lamborghini_Essenza_SCV12">Essenza SCV12</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Lamborghini_Aventador">SC18 Alston</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Lamborghini_Aventador">SC20</a></li>
+                </ul>
             </div>
-
-
+        </div>
     </div>
     </div>
 </main>
